welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var tableau = Array[Color] (tailleTableau)
                              ^Array1:20: error: not found: value tailleTableau
  for(pas <-0 to tailleTableau -1){
                 ^Array1:21: error: not found: value tableau
    setCouleurBrosse(tableau(pas))
                     ^